fix scroll issue on tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,13 @@ html {
   background: #0c0d12;
 }
 
+/* fix scroll issue on tablet */
+@media (pointer: coarse) and (min-width: 1024px) {
+  html {
+    scroll-behavior: auto !important;
+  }
+}
+
 body {
   margin: 0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
